--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "swiper": "^10.3.1",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "typewriter-effect": "^2.21.0"
+    "typescript": "5.2.2"
   }
 }
